--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "env-cmd": "^10.1.0",
+    "jsonwebtoken": "^8.5.1",
     "node-sass": "^4.13.1",
+    "opentok": "^2.9.2",
+    "opentok-react": "^0.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-google-login": "^5.1.1",
     "react-scripts": "3.3.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "env-cmd -f .env react-scripts start",
+    "build": "env-cmd -f .env react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
