Update whencreating a rooms

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_GOOGLE_CLIENT_ID=381398112730-dj0qu6f3rnhv0frs0vvhb31limhhv8rl.apps.googleusercontent.com
 REACT_APP_OPENTOK_API_KEY=46518562
 REACT_APP_OPENTOK_API_SECRET=a7278b5d7345a050ca3a8b0241d59edf35739e75
+REACT_APP_ZAFRA_KEY=12345
