--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-scripts": "3.3.1"
   },
   "scripts": {
-    "start": "env-cmd -f .env react-scripts start",
+    "start": "env-cmd -f .env.development react-scripts start",
     "build": "env-cmd -f .env react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
