--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,4 @@ REACT_APP_GOOGLE_CLIENT_ID=381398112730-dj0qu6f3rnhv0frs0vvhb31limhhv8rl.apps.go
 REACT_APP_OPENTOK_API_KEY=46518562
 REACT_APP_OPENTOK_API_SECRET=a7278b5d7345a050ca3a8b0241d59edf35739e75
 REACT_APP_ZAFRA_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIn0.XiJInHHQBPuwv2gteXz1xPNfQA0nQjCRz9tv3bDWTrc
-REACT_APP_API_URL=https://talk4free.live
+REACT_APP_API_URL=http://localhost:5000
