--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.12.0",
     "react-google-login": "^5.1.1",
     "react-hook-form": "^4.10.1",
+    "react-icons": "^3.9.0",
     "react-scripts": "3.3.1"
   },
   "scripts": {
