--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-google-login": "^5.1.1",
     "react-hook-form": "^4.10.1",
     "react-icons": "^3.9.0",
-    "react-scripts": "3.3.1"
+    "react-scripts": "3.3.1",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "env-cmd -f .env.development react-scripts start",
