--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,4 @@ REACT_APP_OPENTOK_API_KEY=46518562
 REACT_APP_OPENTOK_API_SECRET=a7278b5d7345a050ca3a8b0241d59edf35739e75
 REACT_APP_ZAFRA_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIn0.XiJInHHQBPuwv2gteXz1xPNfQA0nQjCRz9tv3bDWTrc
 REACT_APP_API_URL=http://localhost:5000
+REACT_APP_SOCKECT_URL=http://localhost:5000
