--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "env-cmd": "^10.1.0",
     "jsonwebtoken": "^8.5.1",
     "node-sass": "^4.13.1",
