--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,7 @@
 REACT_APP_GOOGLE_CLIENT_ID=381398112730-dj0qu6f3rnhv0frs0vvhb31limhhv8rl.apps.googleusercontent.com
-REACT_APP_OPENTOK_API_KEY=46518562
-REACT_APP_OPENTOK_API_SECRET=a7278b5d7345a050ca3a8b0241d59edf35739e75
+REACT_APP_OPENTOK_API_KEY=46567282
+REACT_APP_OPENTOK_API_SECRET=2d9fd6aea5fc2fdb4026c24edca2587058cb98d1
 REACT_APP_ZAFRA_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIn0.XiJInHHQBPuwv2gteXz1xPNfQA0nQjCRz9tv3bDWTrc
 REACT_APP_API_URL=http://localhost:5000
+REACT_APP_FRONT_URL=http://localhost:3000
 REACT_APP_SOCKECT_URL=http://localhost:5000
