--- a/package.json
+++ b/package.json
@@ -51,6 +51,10 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.2",
     "prettier": "^1.19.1",
-    "react-bootstrap": "^1.0.0-beta.16"
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-country-flag": "^2.0.1",
+    "react-emoji-render": "^1.2.2",
+    "react-router-dom": "^5.1.2",
+    "react-world-flags": "^1.3.0"
   }
 }
