--- a/.env.development
+++ b/.env.development
@@ -5,3 +5,4 @@ REACT_APP_ZAFRA_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODk
 REACT_APP_API_URL=http://localhost:5000
 REACT_APP_FRONT_URL=http://localhost:3000
 REACT_APP_SOCKECT_URL=http://localhost:5000
+REACT_APP_MAILER_URL=http://localhost:3002
