--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "opentok": "^2.9.2",
     "opentok-react": "^0.9.0",
     "react": "^16.12.0",
+    "react-bootstrap-table-next": "^4.0.0",
+    "react-bootstrap-table2-filter": "^1.3.1",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^16.12.0",
     "react-google-login": "^5.1.1",
     "react-hook-form": "^4.10.1",
