--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ REACT_APP_ZAFRA_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODk
 REACT_APP_API_URL=https://talk4free.live
 REACT_APP_FRONT_URL=https://talk4free.live
 REACT_APP_SOCKECT_URL=https://talk4free.live
+REACT_APP_MAILER_URL=https://talk4free.live
+
